created game logic

--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
 		<p>One of the greatest reasons you should play this game is that it challenges your mind and helps build your mental fortitude.</p>
 		<p>Interested in learning more connect with me on LinkedIn at <a href="http://linkedin.com/in/kevin-buckley-351b856b">LinkedIn</a></p>
 <a href="#Game"></a>
-<div>
-<img src="images/back.png" alt="Queen of Diamonds">
-<img src="images/back.png" alt="Queen of Hearts">
-<img src="images/back.png" alt="King of Diamonds">
-<img src="images/back.png" alt="King of Hearts">
+<div id ="game-board" class = "board clearfix">
 </div>
 </main>
 <footer  class= "clearfix">
